<resources>
    <string name="app_name">Pokemon Go Stats</string>
    <string name="type_bug">Tipo Bicho</string>
    <string name="type_dark">Tipo Siniestro</string>
    <string name="type_dragon">Tipo Dragon</string>
    <string name="type_electric">Tipo Electrico</string>
    <string name="type_fairy">Tipo Hada</string>
    <string name="type_fighting">Tipo Lucha</string>
    <string name="type_fire">Tipo Fuego</string>
    <string name="type_flying">Tipo Volador</string>
    <string name="type_ground">Tipo Tierra</string>
    <string name="type_grass">Tipo Planta</string>
    <string name="type_ghost">Tipo Fantasma</string>
    <string name="type_ice">Tipo Hielo</string>
    <string name="type_normal">Tipo Normal</string>
    <string name="type_poison">Tipo Veneno</string>
    <string name="type_psychic">Tipo Psiquico</string>
    <string name="type_rock">Tipo Roca</string>
    <string name="type_steel">Tipo Metal</string>
    <string name="type_water">Tipo Agua</string>
    <string name="kilometers">Kilómetros</string>
    <string name="add_comment">Añadir Comentario</string>
    <string name="view_comments">Ver Comentarios</string>
    <string name="added_comment">Comentario Añadido</string>
    <string name="deleted_comment">Comentario Borrado</string>
    <string name="already_comment">Este comentario ya esta en la base de datos</string>
    <string name="attack">Ataque</string>
    <string name="defense">Defensa</string>
    <string name="stamina">Aguante</string>
    <string name="evolution">Evolución</string>
    <string name="evolutionCandy">Caramelos para evolución</string>
    <string name="distanceCandyKm">Km para caramelo</string>
    <string name="comments">Comentarios</string>
</resources>
